--- a/index.css
+++ b/index.css
@@ -3,10 +3,9 @@
     margin-top: -10px; 
     background-color: white;
     position: fixed;
-    padding-right:15px;
-    padding-left:15px;
-    top:0;
-    right:0;
+    padding-right:1%;
+    padding-left:1%;
+    right: 0;
     border-radius: 4px;
     box-shadow: 0px 2px 2px grey;
 }
