--- a/index.css
+++ b/index.css
@@ -124,7 +124,7 @@ main {
     margin-top: 50px;
     margin-left: 60px;
     font-family: Helvetica;
-    font-size: 40px;
+    font-size: 250%;
     font-weight: bolder;
     display: inline-block;
 }
