--- a/index.css
+++ b/index.css
@@ -56,14 +56,14 @@
     display:flex; 
     margin-left: auto; 
     margin-top: -400px; 
-    margin-right: 50px; 
+    margin-right: 5%; 
     border-radius: 10px 10px;
     box-shadow: 2px 2px 8px rgb(253, 187, 65);
 }
 
 #website-img {
     display:flex; 
-    margin-left: auto; 
+    margin-left: 55%; 
     margin-top: -200px; 
     margin-right: 50px; 
     border-radius: 10px 10px;
