--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@
 
 #topbar span {
     font-family: Helvetica;
-    font-size: 18px;
+    font-size: 100%;
     font-weight: bolder;
     word-spacing: 15px;
     line-height: 70px;
@@ -27,32 +27,40 @@
     text-decoration: transparent;
     color: rgba(17, 139, 240, 0.742);
 }
-#project-header {
-    color: white;
-    font-size: 70px;
-    padding-left: 50px;
-    padding-top: 50px;
-}
 
 #project-section {
     background-color: black;
     height: 100%;
     width: 100%;
+}
 
+#project-header {
+    color: white;
+    font-size: 200%;
+    padding-left: 50px;
+    padding-top: 50px;
+}
+
+#project-name {
+    font-weight:bolder; 
+    font-size: 120%; 
+    padding-left: 3.5%; 
+    padding-bottom: 0%; 
+    font-style: italic; 
+    color: #ffb300; 
 }
 
 #project-list {
     list-style-type: disc;
     padding-left: 10%;
     color: white;
-    font-size:100%;
+    font-size:120%;
     font-weight: bolder;
 }   
 #league-img {
-    display:flex; 
-    margin-left: auto; 
+    display: inline-block; 
     margin-top: -400px; 
-    margin-right: 5%; 
+    margin-left: 70%;
     border-radius: 10px 10px;
     box-shadow: 2px 2px 8px rgb(253, 187, 65);
 }
