--- a/index.css
+++ b/index.css
@@ -81,6 +81,7 @@
 
 #contact-section {
     height: 700px;
+    text-align: center;
 }
 
 #contact-logos span a:hover {
@@ -119,10 +120,10 @@ header {
 }
 
 main {
-    margin-top: 50px;
-    margin-left: 60px;
+    margin-top: 5%;
+    margin-left: 5%;
     font-family: Helvetica;
-    font-size: 250%;
+    font-size: 6vh;
     font-weight: bolder;
     display: inline-block;
 }
