--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 #topbar {
     margin-right: 10%;
-    margin-top: -5px; 
+    margin-top: -0.5vh; 
     background-color: white;
     position: fixed;
     padding-right:1%;
