--- a/lab10c/src/app/lab10c.html
+++ b/lab10c/src/app/lab10c.html
@@ -187,6 +187,13 @@
 	<p style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
 		C:\My Files\VSProjects\lin-simon.github.io><b> npm install -g @angular/cli</b>
 	</p>
+  <p style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
+		The difficult part of building the page was setting up the virtual environment for node.js. There are a lot of dependencies for the framework.
+
+	</p>
+  <p style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
+		Other than that, hosting was relatively easy since I already have hosted using github pages in the past.    
+	</p>
 	<p style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
 		This page was built with Angular's Component styles which encapsulate content to specific pages, which was initially very syntactically confusing to understand.
 	</p>
@@ -197,6 +204,7 @@
   <p style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
 		I also installed the <b>@angular/animations</b> package which includes buttons and cards which I used to animate fluid buttons below!
 	</p>
+
 </div>
   <div class="card-container">
     <a class="card" target="_blank" rel="noopener" href="https://linsimon.com/index.html">
