--- a/contact.css
+++ b/contact.css
@@ -1,23 +1,27 @@
-.topnav {
-	margin-left: 55%;
+#project-header
+{
+    font-size: 4vw;
+    animation: fadeIn 0.6s;
 }
-.topnav a {
-	float: left;
-	display: block;
-	color: black;
-	text-align: center;
-	padding: 14px 16px;
-	text-decoration: none;
-	font-size: 20px;
-	font-family: Montserrat, sans-serif;
-}
-
-.topnav a:hover {
-	background-color: #ddd;
-	color: rgba(17, 139, 240, 0.742);
+.cards 
+{
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    padding: 0;
+    margin: 0;
 }
 
-.topnav a.active {
-	background-color: #04AA6D;
-	color: white;
+.card
+{
+
+    border-radius: 10px;
+    flex: 0 1 15%;
+    padding: 0;
+    animation: fadeIn 1.2s;
+}
+
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
 }
