--- a/contact.css
+++ b/contact.css
@@ -21,6 +21,54 @@
     animation: fadeIn 1.2s;
 }
 
+@media screen and (min-width: 10em) {
+    .cards 
+    {
+        
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+    }
+ 
+    .card 
+    {
+        flex: 0 1 calc(15% - 1em);
+        margin: 20px;
+        
+        
+    }
+    .card p 
+    {
+        font-size: 15px;
+    }
+}
+
+@media screen and (min-width: 40em) {
+    .cards 
+    {
+        
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+    }
+ 
+    .card 
+    {
+        flex: 0 1 calc(25% - 1em);
+    }
+}
+ 
+@media screen and (min-width: 60em) {
+    .cards 
+    {
+        flex: 0 1 calc(20% - 1em);
+    }
+     
+    .card 
+    {
+    }
+}
+
 @keyframes fadeIn {
     0% { opacity: 0; }
     100% { opacity: 1; }
