--- a/projects.css
+++ b/projects.css
@@ -28,7 +28,7 @@
     font-size: 1.2vw;
 }
 
-@media screen and (min-width: 10em) {
+@media screen and (max-width: 900px) {
     .cards 
     {
         
@@ -48,6 +48,17 @@
     {
         font-size: 15px;
     }
+    #topbar {
+        margin-right: 18.5%;
+        border-radius: 0.5vh;
+        box-shadow: 0.2vh 0.1vh 0.5vh grey;
+    }
+
+    #project-header
+    {
+        font-size: 9vw;
+        animation: fadeIn 0.6s;
+    }
 }
 
 @media screen and (min-width: 40em) {
@@ -63,6 +74,7 @@
     {
         flex: 0 1 calc(25% - 1em);
     }
+    
 }
  
 @media screen and (min-width: 60em) {
