--- a/contact.css
+++ b/contact.css
@@ -1,7 +1,10 @@
-#project-header
+#contact-header
 {
     font-size: 4vw;
     animation: fadeIn 0.6s;
+    font-family: Montserrat, sans-serif;
+    font-weight: bolder;
+    text-align: center;
 }
 .cards 
 {
@@ -21,7 +24,7 @@
     animation: fadeIn 1.2s;
 }
 
-@media screen and (min-width: 10em) {
+@media screen and (max-width: 900px) {
     .cards 
     {
         
@@ -32,7 +35,7 @@
  
     .card 
     {
-        flex: 0 1 calc(15% - 1em);
+        flex: 0 1 calc(55% - 1em);
         margin: 20px;
         
         
@@ -41,6 +44,20 @@
     {
         font-size: 15px;
     }
+    #topbar {
+        margin-right: 18.5%;
+        border-radius: 0.5vh;
+        box-shadow: 0.2vh 0.1vh 0.5vh grey;
+    }
+    #contact-header
+    {
+        font-size: 9vw;
+        animation: fadeIn 0.6s;
+        font-family: Montserrat, sans-serif;
+        font-weight: bolder;
+        text-align: center;
+    }
+    
 }
 
 @media screen and (min-width: 40em) {
