--- a/projects.css
+++ b/projects.css
@@ -2,6 +2,9 @@
 {
     font-size: 4vw;
     animation: fadeIn 0.6s;
+    font-family: Montserrat, sans-serif;
+    font-weight: bolder;
+    text-align: center;
 }
 .cards 
 {
@@ -60,6 +63,7 @@
         margin-right: 18.5%;
         border-radius: 0.5vh;
         box-shadow: 0.2vh 0.1vh 0.5vh grey;
+        z-index: 10;
     }
 
     #project-header
