--- a/projects.css
+++ b/projects.css
@@ -14,7 +14,10 @@
     padding: 0;
     margin: 0;
 }
-
+.centered
+{
+    font-family: Montserrat, sans-serif;
+}
 .card
 {
     border-radius: 10px;
@@ -22,15 +25,14 @@
     padding: 0;
     animation: fadeIn 1.2s;
     transition: transform 0.3s;
-    transform-style: preserve-3d;
 }
 
 .card:hover
 {
-    transform: rotateY(170deg);
+    transform: rotateY(90deg);
+    animation: fadeOut 0.3s;
     
 }
-
 .card p
 {
     text-align: center;
@@ -104,4 +106,9 @@
 @keyframes fadeIn {
     0% { opacity: 0; }
     100% { opacity: 1; }
+}
+
+@keyframes fadeOut {
+    100% { opacity: 0; }
+    0% { opacity: 1; }
 }
