--- a/index.css
+++ b/index.css
@@ -1,60 +1,121 @@
-#topbar a {
-    font-size: 125%;
-    line-height: 7vh;
-    font-family: Montserrat, sans-serif;
-    text-decoration: none;
-    font-weight: normal;
-    color: black;
-    margin: 0vh 1.5vh 0vh 1.5vh;
-}
-
-#topbar a:hover {
-    color: rgba(17, 139, 240, 0.742);
-    transition: all 180ms ease-in;
-}   
-
-#topbar {
-    margin-top: 2%;
-    display: flex;
-    margin-right: 12%;
-    position: fixed;
-    right: 0;
-    border-radius: 0.5vh;
-    box-shadow: 0.2vh 0.1vh 0.5vh grey;
-    background-color: white;
-}
-
-
-#comp-logo {
-    min-width: 400px;
-    min-height: 400px;
-    display: flex;
+.navbarScroll.navbarDark {
+    background-color: black;
+    box-shadow: 0 0.7px 10px black;
     
 }
 
-#intro {
-    animation: fadeIn 1.5s;
-    font-size: 5vh;
+.bgimage {
+    height:100vh;
+    background-color: black;
+    background-size:cover;
+    position:relative;
+    box-shadow: 0 2px 10px black;
 }
 
-
-nav {
-    display: flex; 
-    justify-content: space-between; 
-    align-items: center;
-}
-
-main {
-    margin-top: 10vw;
-    margin-left: 5vw;
+.text-center {
     font-family: Montserrat, sans-serif;
-    font-weight: bold;
-    display: flex;
-    justify-content: space-evenly;
-    align-content: center;
+    font-size: 4.5rem;
+}
+.hero_title {
+    font-size: 5.2rem;
+    font-family: Montserrat, sans-serif;
+    animation: fadeIn 0s;
+}
+.hero_desc {
+    font-size: 2rem;
+    font-family: Montserrat, sans-serif;
+    animation: fadeIn 1s;
+}
+.hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: rgb(228, 228, 228);
+    font-family: Montserrat, sans-serif;
+    animation: fadeIn 1.5s;
 }
 
+.navbar-dark .navbar-nav .nav-link {
+    color:white;
+    font-family: Montserrat, sans-serif;
+    font-weight:800;
+}
+
+.navbar-dark .navbar-nav .nav-link:hover {
+    color:rgb(74, 185, 254);
+    font-family: Montserrat, sans-serif;
+    font-weight:800;
+}
+
+
+.nav-link {
+    color: black ;
+}
+
+
+#contact {
+    font-family: Montserrat, sans-serif;
+    padding-bottom: 4rem;
+}
+/* about section image css */
+.imageAboutPage {
+    width: 100%;
+}
+
+.card-title , .card-text{
+    text-align: center;
+}
+
+.social-icons {
+    font-size: 36px;
+}
+
+.fab:hover, .fa-regular:hover {
+    color: #4a9fff;
+}
+.fab, .fa-regular {
+    color: #ffffff;
+}
+/* footer styling */
+#footer {
+    background-color: #000000;
+    text-align: center;
+    position: sticky;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    box-shadow: 0 -1px 4px black;
+}
+
+.form-control {
+    background-color: #f5f4f4;
+    border:none;
+    border-bottom: 2px solid black;
+    box-shadow:0 0 4px rgba(0,0,0,0.3);
+    transition: .2s box-shadow;
+}
+
+.btn {
+    color: #000000;
+    border-width: 2px;
+
+}
+
+.form-control:hover {
+    box-shadow:0 0 4px rgb(110, 178, 252);
+}
+
+body
+{
+    background-color: #eeebeb;
+}
 @keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+}
+@keyframes fade {
     0% { opacity: 0; }
     100% { opacity: 1; }
 }
