--- a/index.css
+++ b/index.css
@@ -111,11 +111,12 @@ body
 {
     background-color: #eeebeb;
 }
-@keyframes fadeIn {
-    0% { opacity: 0; }
-    100% { opacity: 1; }
+
+html 
+{
+    scroll-behavior: smooth;    
 }
-@keyframes fade {
+@keyframes fadeIn {
     0% { opacity: 0; }
     100% { opacity: 1; }
 }
