--- a/index.css
+++ b/index.css
@@ -53,6 +53,10 @@
 #job {
     animation: fadeInJob 8.2s;
 }
+
+#fade-nav {
+    animation: fadeInDelayed 5s;
+}
 .navbar-dark .navbar-nav .nav-link {
     color:white;
     font-family: Montserrat, sans-serif;
